k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rehearse
  labels:
    app.kubernetes.io/part-of: rehearse
