k8s/base/06-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: rehearse
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: bhopathivardhan1/rehearse-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 800m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3001
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: rehearse
spec:
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
