k8s/base/07-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: rehearse
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: bhopathivardhan1/rehearse-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 800m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /pricing
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /pricing
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: rehearse
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
